--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     * And much more…</p>
             </div>
         </div>
+        <div class="partner">
+            <h1><span id="a">P</span><span id="b">A</span><span id="c">R</span><span id="d">T</span><span id="e">N</span><span id="f">E</span><span id="g">R</span> <span id="h">N</span><span id="i">E</span><span id="j">T</span><span id="k">W</span><span id="l">O</span><span id="m">R</span><span id="n">K</span></h1>
+        </div>
     </div>
 </body>
 </html>
