--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="social">
             <a href="https://twitter.com/WeRTheUndead" target="_blank"><img src="./resources/img/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/UndeadCommunity.cro/" target="_blank"><img src="./resources/img/instagram.jpg" alt="Instagram"></a>
             <a href="https://discord.gg/UquX2WF9T4" target="_blank"><img id="social2" src="./resources/img/discord.png" alt="Discord"></a>
         </div>
     </header>
