--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         </div>
         <div class="partner">
             <h1><span id="a">P</span><span id="b">A</span><span id="c">R</span><span id="d">T</span><span id="e">N</span><span id="f">E</span><span id="g">R</span> <span id="h">N</span><span id="i">E</span><span id="j">T</span><span id="k">W</span><span id="l">O</span><span id="m">R</span><span id="n">K</span></h1>
+            <div class="partner-icon">
+                <a href="https://crodoonft.com/" target="_blank"><img src="./resources/img/crodoo.jpg" alt="CroDoo"></a>
+                <a href="https://www.rektapecope.club/" target="_blank"><img src="./resources/img/rektape.jpg" alt="Rekt Ape"></a>
+                <a href="https://sleazy-weasel.com/" target="_blank"><img src="./resources/img/sleazy.jpg" alt="Sleazy Weasel"></a>
+            </div>
         </div>
     </div>
 </body>
