--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Undead Community</title>
-    <link href="./resources/css/header.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/animation.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/main.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/body.css" type="text/css" rel="stylesheet">
@@ -57,6 +56,12 @@
                     * Complimentary membership Airdrops/ Mints<br>
                     * Cryptocurrency and NFT tools<br>
                     * And much more…</p>
+            </div>
+        </div>
+        <div class="collection">
+            <div class="collection-banner">
+                <h1><span id="aa">C</span><span id="bb">O</span><span id="cc">L</span><span id="dd">L</span><span id="ee">E</span><span id="ff">C</span><span id="gg">T</span><span id="hh">I</span><span id="ii">O</span><span id="jj">N</span><span id="kk">S</span></h1>
+                <img src="./resources/img/banner2.jpg" alt="Banner">
             </div>
         </div>
         <div class="partner">
