--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Undead Community</title>
+    <link href="./resources/css/header.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/animation.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/main.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/body.css" type="text/css" rel="stylesheet">
@@ -62,6 +63,15 @@
             <div class="collection-banner">
                 <h1><span id="aa">C</span><span id="bb">O</span><span id="cc">L</span><span id="dd">L</span><span id="ee">E</span><span id="ff">C</span><span id="gg">T</span><span id="hh">I</span><span id="ii">O</span><span id="jj">N</span><span id="kk">S</span></h1>
                 <img src="./resources/img/banner2.jpg" alt="Banner">
+            </div>
+            <div class="founderpass">
+                <div><img src="./resources/img/founderpass.jpg" alt="Founder Pass"></div>
+                <a href="https://undead-community.netlify.app/" target="_blank"><h2>Mint Founder Pass</h2></a>
+            </div>
+            <div class="undead">
+                <img id="undead1" src="./resources/img/undead2.jpg" alt="Undead">
+                <a href="https://undeadspaceapes.com/" target="_blank"><h2>Undead Space Apes</h2></a>
+                <img id="undead2" src="./resources/img/undead.jpg" alt="Undead">
             </div>
         </div>
         <div class="partner">
