--- a/index.html
+++ b/index.html
@@ -74,12 +74,49 @@
                 <img id="undead2" src="./resources/img/undead.jpg" alt="Undead">
             </div>
         </div>
+        <div class="undead-game">
+            <div class="game-intro">
+                <div class="game-icon">
+                    <img src="./resources/img/logo.jpg" alt="Logo">
+                </div>
+                <h1><span id="a1">U</span><span id="a2">N</span><span id="a3">D</span><span id="a4">E</span><span id="a5">A</span><span id="a6">D</span> <span id="a7">G</span><span id="a8">A</span><span id="a9">M</span><span id="a10">E</span><span id="a11">S</span><br>
+                    We just launched our Undead Discord economy with $UND!</h1>
+            </div>
+            <div class="game-info">
+                <div class="game-icon">
+                    <img id="game" src="./resources/img/games.png" alt="Games">
+                </div>
+                    <p>By engaging in our Discord server, completing helpful tasks, and encouraging community growth, you can earn $UNDs.<br>
+                     Valuable digital and Tangible items will soon be purchasable using $UND!
+                    </p>
+            </div>
+            <div class="sub-nav">
+                <ul>
+                    <li><a href="#">Prizes</a></li>
+                    <li><a href="#">Raffle</a></li>
+                    <li><a href="#">Meet The Team</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="partner">
             <h1><span id="a">P</span><span id="b">A</span><span id="c">R</span><span id="d">T</span><span id="e">N</span><span id="f">E</span><span id="g">R</span> <span id="h">N</span><span id="i">E</span><span id="j">T</span><span id="k">W</span><span id="l">O</span><span id="m">R</span><span id="n">K</span></h1>
             <div class="partner-icon">
                 <a href="https://crodoonft.com/" target="_blank"><img src="./resources/img/crodoo.jpg" alt="CroDoo"></a>
                 <a href="https://www.rektapecope.club/" target="_blank"><img src="./resources/img/rektape.jpg" alt="Rekt Ape"></a>
                 <a href="https://sleazy-weasel.com/" target="_blank"><img src="./resources/img/sleazy.jpg" alt="Sleazy Weasel"></a>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="copyright">
+                <h3>© Undead Community. All rights reserved.</h3>
+            </div>
+            <div class="link">
+                <a href="#">Disclaimer</a>
+            </div>
+            <div class="social">
+                <a href="https://twitter.com/WeRTheUndead" target="_blank"><img src="./resources/img/twitter.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/UndeadCommunity.cro/" target="_blank"><img src="./resources/img/instagram.jpg" alt="Instagram"></a>
+                <a href="https://discord.gg/UquX2WF9T4" target="_blank"><img id="social2" src="./resources/img/discord.png" alt="Discord"></a>
             </div>
         </div>
     </div>
