--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navigation">
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">PRIZES</a></li>
+                <li><a href="prizes.html">PRIZES</a></li>
                 <li><a href="#">TEAM</a></li>
             </ul>
         </div>
@@ -92,7 +92,7 @@
             </div>
             <div class="sub-nav">
                 <ul>
-                    <li><a href="#">Prizes</a></li>
+                    <li><a href="prizes.html">Prizes</a></li>
                     <li><a href="#">Raffle</a></li>
                     <li><a href="#">Meet The Team</a></li>
                 </ul>
