--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="prizes.html">PRIZES</a></li>
-                <li><a href="#">TEAM</a></li>
+                <li><a href="team.html">TEAM</a></li>
             </ul>
         </div>
         <div class="social">
@@ -94,7 +94,7 @@
                 <ul>
                     <li><a href="prizes.html">Prizes</a></li>
                     <li><a href="#">Raffle</a></li>
-                    <li><a href="#">Meet The Team</a></li>
+                    <li><a href="team.html">Meet The Team</a></li>
                 </ul>
             </div>
         </div>
@@ -111,7 +111,7 @@
                 <h3>© Undead Community. All rights reserved.</h3>
             </div>
             <div class="link">
-                <a href="#">Disclaimer</a>
+                <a href="disclaimer.html">Disclaimer</a>
             </div>
             <div class="social">
                 <a href="https://twitter.com/WeRTheUndead" target="_blank"><img src="./resources/img/twitter.png" alt="Twitter"></a>
