--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <link href="./resources/css/animation.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/main.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/body.css" type="text/css" rel="stylesheet">
-    <link href="./resources/css/prizes.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/team.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -31,40 +31,44 @@
         </div>
     </header>
     <div class="body">
-        <div class="prizes">
-            <h1><span id="b1">P</span><span id="b2">R</span><span id="b3">I</span><span id="b4">Z</span><span id="b5">E</span><span id="b6">S</span></h1>
-            <div class="prize-info">
-                <img src="./resources/img/aristo.jpg" alt="Aristo Dog">
-                <p>Prize Template<br>
-                    Prize name: Aristodog<br>
-                    Prize Price: 100,000$UND<br>
-                    Prize Bio: Create a community of aristocrats, driven by the community. First 100% utility project, our goal is to greatly improve the experience of cronos users.<br>
-                    Prize links: https://aristodognft.com</p>
+        <div class="team-heading">
+            <h1><span id="team1">T</span><span id="team2">E</span><span id="team3">A</span><span id="team4">M</span></h1>
+        </div>
+        <div class="team">
+            <div class="member">
+                <img src="./resources/img/iamlegend.jpg" alt="Project Leader">
+                <h2>PROJECT LEAD</h2>
+                <h3>IAmLegend</h3>
             </div>
-            <div class="prize-info">
-                <img src="./resources/img/doo.jpg" alt="Cro Doo">
-                <p>Prize Template<br>
-                    Prize name: CroDoo NFT<br>
-                    Prize Price: 30,000$UND<br>
-                    Prize Bio: The CroDoo is an NFT project with a first generation of 5678 unique voodoo dolls PFP collectibles on Cronos blockchain. We aim for a long term project of which all holders of OG collection benefit from holding them.<br>
-                    Prize links: https://app.ebisusbay.com/collection/crodoo
-                </p>
+            <div class="member">
+                <img src="./resources/img/manager.jpg" src="Community Manager">
+                <h2>COMMUNITY MANAGER</h2>
+                <h3>4Jet</h3>
             </div>
-            <div class="prize-info">
-                <img src="./resources/img/Croodle.jpg" alt="Croodle Apes">
-                <p>Prize name: CroOdle ape NFT<br>
-                    Prize Price: 25,000$UND<br>
-                    Prize Bio: More then 120 traits, we love the doodle style.<br>
-                    Prize links: https://app.ebisusbay.com/collection/croodle-ape
-                </p>
+        </div>
+        <div class="team-heading">
+            <h1 id="amb">AMBASSADORS</h1>
+        </div>
+        <div class="team">
+            <div class="member">
+                <img src="./resources/img/amb.jpg" alt="Ambassador">
+                <h2>AMBASSADOR</h2>
+                <h3>MomsSpaghetti</h3>
             </div>
-            <div class="prize-info">
-                <img id="prize-rekt" src="./resources/img/rekt.jpg" alt="Rekt APe">
-                <p>Prize Template<br>
-                    Prize name: Rekt Ape NFT<br>
-                    Prize Price: 50,000$UND<br>
-                    Prize Bio: Rekt Ape Cope Club is a private community of degens came together to enjoy the ride in NFT space. It's a safe space where you can share stories of how you got rekt and together find a way to fare the crazy NFT seas.<br>
-                    Prize links: https://www.rektapecope.club/</p>
+            <div class="member">
+                <img src="./resources/img/amb2.jpg" alt="Ambassador">
+                <h2>AMBASSADOR</h2>
+                <h3>BlackerChaos</h3>
+            </div>
+            <div class="member">
+                <img src="./resources/img/amb3.jpg" alt="Ambassador">
+                <h2>AMBASSADOR</h2>
+                <h3>Evo7.</h3>
+            </div>
+            <div class="member">
+                <img src="./resources/img/amb4.jpg" alt="Ambassador">
+                <h2>AMBASSADOR</h2>
+                <h3>ThePaperChaser</h3>
             </div>
         </div>
         <div class="footer">
