--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             <a href="https://discord.gg/UquX2WF9T4" target="_blank"><img id="social2" src="./resources/img/discord.png" alt="Discord"></a>
         </div>
     </header>
+    <div class="navigation" id="navigation">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="prizes.html">PRIZES</a></li>
+            <li><a href="team.html">TEAM</a></li>
+        </ul>
+    </div>
     <div class="body">
         <div class="introduction">
             <img src="./resources/img/banner1.jpg" alt="banner">
