--- a/prizes.html
+++ b/prizes.html
@@ -30,6 +30,13 @@
             <a href="https://discord.gg/UquX2WF9T4" target="_blank"><img id="social2" src="./resources/img/discord.png" alt="Discord"></a>
         </div>
     </header>
+    <div class="navigation" id="navigation">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="prizes.html">PRIZES</a></li>
+            <li><a href="team.html">TEAM</a></li>
+        </ul>
+    </div>
     <div class="body">
         <div class="prizes">
             <h1><span id="b1">P</span><span id="b2">R</span><span id="b3">I</span><span id="b4">Z</span><span id="b5">E</span><span id="b6">S</span></h1>
