--- a/team.html
+++ b/team.html
@@ -30,6 +30,13 @@
             <a href="https://discord.gg/UquX2WF9T4" target="_blank"><img id="social2" src="./resources/img/discord.png" alt="Discord"></a>
         </div>
     </header>
+    <div class="navigation" id="navigation">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="prizes.html">PRIZES</a></li>
+            <li><a href="team.html">TEAM</a></li>
+        </ul>
+    </div>
     <div class="body">
         <div class="team-heading">
             <h1><span id="team1">T</span><span id="team2">E</span><span id="team3">A</span><span id="team4">M</span></h1>
